; ModuleID = '/home/carl/AnghaBench/postgres/src/tutorial/extr_funcs.c_add_one_float8.c'
source_filename = "/home/carl/AnghaBench/postgres/src/tutorial/extr_funcs.c_add_one_float8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64* @add_one_float8(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i64*, align 8
  store i64* %0, i64** %2, align 8
  %4 = call i64 @palloc(i32 8)
  %5 = inttoptr i64 %4 to i64*
  store i64* %5, i64** %3, align 8
  %6 = load i64*, i64** %2, align 8
  %7 = load i64, i64* %6, align 8
  %8 = sitofp i64 %7 to double
  %9 = fadd double %8, 1.000000e+00
  %10 = fptosi double %9 to i64
  %11 = load i64*, i64** %3, align 8
  store i64 %10, i64* %11, align 8
  %12 = load i64*, i64** %3, align 8
  ret i64* %12
}

declare dso_local i64 @palloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
